--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
                 </div>
                 <div class="about-child">
-                    <i class="fa fa-desktop"></i>
+                    <i class="fa fa-pencil-ruler"></i>
                     <h3>Design</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
                 </div>
@@ -258,7 +258,7 @@
                 <div class="progress">
                     <div class="progress-bar2 progress-bar"><span>85%</span></div>
                 </div>
-                <h3><i class="fa fa-camera"></i> Photoshop</h3>
+                <h3><i class="fa fa-pen-nib"></i> Photoshop</h3>
                 <div class="progress">
                     <div class="progress-bar3 progress-bar"><span>75%</span></div>
                 </div>
